aks-bicep/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-config-example
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app.kubernetes.io/name: kubernetes-config-example
