aks-bicep/ing-devnexus.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-config-example
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: kubernetes-config-example
          servicePort: 80
